test-package-compiler/src/snapshots/test_package_compiler__tests__duplicate_module.snap
---
source: test-package-compiler/src/tests.rs
expression: "./cases/duplicate_module"
---
error: Duplicate module

The module `main` is defined multiple times.

It is first defined at duplicate_module/src/main.gleam
It is defined a second time at duplicate_module/test/main.gleam
