test-package-compiler/src/snapshots/test_package_compiler__tests__duplicate_module_test_dev.snap
---
source: test-package-compiler/src/tests.rs
expression: "./cases/duplicate_module_test_dev"
---
error: Duplicate module

The module `main` is defined multiple times.

It is first defined at duplicate_module_test_dev/test/main.gleam
It is defined a second time at duplicate_module_test_dev/dev/main.gleam
