test-package-compiler/src/snapshots/test_package_compiler__tests__erlang_app_generation.snap
---
source: test-package-compiler/src/tests.rs
expression: "./cases/erlang_app_generation"
---
//// erlang_app_generation/_gleam_artefacts/main.abstr
<288 byte binary>

//// erlang_app_generation/_gleam_artefacts/main.cache
<.cache binary>

//// erlang_app_generation/_gleam_artefacts/main.cache_meta
<29 byte binary>

//// erlang_app_generation/ebin/main.beam
<0 byte binary>

//// erlang_app_generation/ebin/my_erlang_application.app
{application, my_erlang_application, [
    {mod, {'my_erlang_application_sup', []}},
    {vsn, "0.1.0"},
    {applications, [gleam_otp,
                    gleam_stdlib,
                    hpack_erl,
                    inets,
                    midas,
                    simple_json,
                    ssl,
                    uuid_erl]},
    {description, "It's very cool"},
    {modules, [main]},
    {registered, []}
]}.


//// Warning
warning: Empty module

Module 'main' contains no public definitions.

Hint: You can safely remove this module.
