test-package-compiler/src/snapshots/test_package_compiler__tests__erlang_app_generation_with_argument.snap
---
source: test-package-compiler/src/tests.rs
expression: "./cases/erlang_app_generation_with_argument"
---
//// erlang_app_generation_with_argument/_gleam_artefacts/main.abstr
<288 byte binary>

//// erlang_app_generation_with_argument/_gleam_artefacts/main.cache
<.cache binary>

//// erlang_app_generation_with_argument/_gleam_artefacts/main.cache_meta
<29 byte binary>

//// erlang_app_generation_with_argument/ebin/my_erlang_application.app
{application, my_erlang_application, [
    {mod, {'my_erlang_application_sup', [1, two]}},
    {vsn, "0.1.0"},
    {applications, [gleam_otp,
                    gleam_stdlib,
                    inets,
                    midas,
                    simple_json,
                    ssl]},
    {description, "It's very cool"},
    {modules, [main]},
    {registered, []}
]}.


//// Warning
warning: Empty module

Module 'main' contains no public definitions.

Hint: You can safely remove this module.
