test-package-compiler/src/snapshots/test_package_compiler__tests__erlang_escape_names.snap
---
source: test-package-compiler/src/tests.rs
expression: "./cases/erlang_escape_names"
---
//// erlang_escape_names/_gleam_artefacts/one.abstr
<490 byte binary>

//// erlang_escape_names/_gleam_artefacts/one.cache
<.cache binary>

//// erlang_escape_names/_gleam_artefacts/one.cache_meta
<32 byte binary>

//// erlang_escape_names/_gleam_artefacts/two.abstr
<1499 byte binary>

//// erlang_escape_names/_gleam_artefacts/two.cache
<.cache binary>

//// erlang_escape_names/_gleam_artefacts/two.cache_meta
<76 byte binary>

//// erlang_escape_names/ebin/importy.app
{application, importy, [
    {vsn, "0.1.0"},
    {applications, []},
    {description, ""},
    {modules, [one,
               two]},
    {registered, []}
]}.
