test-package-compiler/src/snapshots/test_package_compiler__tests__erlang_import.snap
---
source: test-package-compiler/src/tests.rs
expression: "./cases/erlang_import"
---
//// erlang_import/_gleam_artefacts/one.abstr
<611 byte binary>

//// erlang_import/_gleam_artefacts/one.cache
<.cache binary>

//// erlang_import/_gleam_artefacts/one.cache_meta
<42 byte binary>

//// erlang_import/_gleam_artefacts/two.abstr
<391 byte binary>

//// erlang_import/_gleam_artefacts/two.cache
<.cache binary>

//// erlang_import/_gleam_artefacts/two.cache_meta
<31 byte binary>

//// erlang_import/ebin/importy.app
{application, importy, [
    {vsn, "0.1.0"},
    {applications, []},
    {description, ""},
    {modules, [one,
               two]},
    {registered, []}
]}.
